tests/fixtures/type-error/src/index.ts
export const invalidCount: number = "not-a-number";
